[package]
name = "rs-1722"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/ItsDrike/rs-1722"
description = "IEEE 1722 (AVTP) implementation for real-time media transport over L2 Ethernet with precise time synchronization"
keywords = ["avtp", "tsn", "ethernet", "real-time", "ptp"]
categories = ["network-programming", "multimedia"]
license = "LGPL-3.0-only"

[dependencies]
ctrlc = "3.5.2"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
