[package]
name = "rs-1722"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/ItsDrike/rs-1722"
description = "IEEE 1722 (AVTP) implementation for real-time media transport over L2 Ethernet with precise time synchronization"
keywords = ["avtp", "tsn", "ethernet", "real-time", "ptp"]
categories = ["network-programming", "multimedia"]
license = "LGPL-3.0-only"

[dependencies]
arbitrary-int = "2.1.1"
bitstream-io = "4.10.0"
ctrlc = "3.5.2"
num_enum = "0.7.6"
pnet = "0.35.0"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
